--- a/home.html
+++ b/home.html
@@ -36,13 +36,109 @@
     </header>
 
     <main>
+        <!-- ----------- SECTION 1 ----------- -->
         <section class="banner">
             <div class="sliders">
                 <div class="slide">
+                    <div class="slide-area">
+                        <h1>Design is about<br><span>Communication</span></h1>
+                        <h2>Call Us: +00 0 1234 5678</h2>
+                        <a href="" class="button">Get in touch!</a>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slide-area">
+                        <h1>Design is about<br><span>Test 1</span></h1>
+                        <h2>Call Us: +00 0 1234 5678</h2>
+                        <a href="" class="button">Get in touch!</a>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slide-area">
+                        <h1>Design is about<br><span>Test 2</span></h1>
+                        <h2>Call Us: +00 0 1234 5678</h2>
+                        <a href="" class="button">Get in touch!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sliders-pointers">
+                <div class="pointer active"></div>
+                <div class="pointer"></div>
+                <div class="pointer"></div>
+            </div>
+        </section>
+
+        <!-- ----------- SECTION 2 ----------- -->
+        <section class="default light">
+            <div class="section-title">About Us?</div>
+            <div class="section-desc">Who we are?</div>
+            <div class="section-body">
+                <div class="section-aboutus">
+                    <div class="section-aboutus--left">
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        </p>
+                        <br>
+                        <a href="" class="button">Learn More</a>
+                    </div>
+                    <div class="section-aboutus--right">
+                        <img src="/media/foto9.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ----------- SECTION 3 ----------- -->
+        <section class="default dark">
+            <div class="section-title">Services</div>
+            <div class="section-desc">Services that we provide</div>
+            <div class="section-body">
+                <div class="section-services">
+                    <div class="section-service">
+                        <img src="assets/img/icons/medalha.png" alt="">
+                        <h4>High Quality Design</h4>
+                        <p>Content main Description</p>
+                    </div>
+                    <div class="section-service">
+                        <img src="assets/img/icons/estrela.png" alt="">
+                        <h4>Modern Design</h4>
+                        <p>Content main Description</p>
+                    </div>
+                    <div class="section-service">
+                        <img src="assets/img/icons/relogio.png" alt="">
+                        <h4>Regular Update</h4>
+                        <p>Content main Description</p>
+                    </div>
+                    <div class="section-service">
+                        <img src="assets/img/icons/balao.png" alt="">
+                        <h4>Fast and free support</h4>
+                        <p>Content main Description</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ----------- SECTION 4 ----------- -->
+        <section class="default light">
+            <div class="section-title">Our Projects</div>
+            <div class="section-desc">What we create?</div>
+            <div class="section-body">
+                <div class="section-projects">
+                    <div class="section-projects-filters">
+                        <ul>
+                            <li>All</li>
+                            <li class="active">Photos</li>
+                            <li>Branding</li>
+                            <li>Adverts</li>
+                            <li>Development</li>
+                            <li>Misc</li>
+                        </ul>
+                    </div>
                     
                 </div>
             </div>
         </section>
+
     </main>
 
     <footer>
