--- a/home.html
+++ b/home.html
@@ -332,7 +332,7 @@
                 </div>
             </div>
         </section>
-        <!-- ----------- SECTION 6: HAPPY CLIENTS ----------- -->
+        <!-- --------- SECTION 6: HAPPY CLIENTS --------- -->
         <section class="default light">
             <div class="section-happyclients-area">
                 <div class="section-title">Happy Clients</div>
@@ -346,13 +346,17 @@
                                     <div class="section-happyclients--name">John Doe</div>
                                     <div class="section-happyclients--role">Head of PR Departament</div>
                                     <img class="section-happyclients--quote" src="./assets/img/icons/quote.png" alt="">
-                                    <div class="section-happyclients--testimonial">Lorem Ipsum has been the industry's
+                                    <div class="section-happyclients--testimonial">
+                                        Lorem Ipsum has been the industry's
                                         standard
-                                        dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                                        dummy text ever since the 1500s, when an unknown printer took a galley of type
+                                        and
                                         scrambled
-                                        it to make a type specimen book. It has survived not only five centuries, but also
+                                        it to make a type specimen book. It has survived not only five centuries, but
+                                        also
                                         the leap
-                                        into electronic typesetting, remaining essentially unchanged. </div>
+                                        into electronic typesetting, remaining essentially unchanged.
+                                    </div>
                                 </div>
                             </div>
                             <div class="slide">
@@ -363,9 +367,11 @@
                                     <img class="section-happyclients--quote" src="./assets/img/icons/quote.png" alt="">
                                     <div class="section-happyclients--testimonial">Lorem Ipsum has been the industry's
                                         standard
-                                        dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                                        dummy text ever since the 1500s, when an unknown printer took a galley of type
+                                        and
                                         scrambled
-                                        it to make a type specimen book. It has survived not only five centuries, but also
+                                        it to make a type specimen book. It has survived not only five centuries, but
+                                        also
                                         the leap
                                         into electronic typesetting, remaining essentially unchanged. </div>
                                 </div>
@@ -378,9 +384,11 @@
                                     <img class="section-happyclients--quote" src="./assets/img/icons/quote.png" alt="">
                                     <div class="section-happyclients--testimonial">Lorem Ipsum has been the industry's
                                         standard
-                                        dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                                        dummy text ever since the 1500s, when an unknown printer took a galley of type
+                                        and
                                         scrambled
-                                        it to make a type specimen book. It has survived not only five centuries, but also
+                                        it to make a type specimen book. It has survived not only five centuries, but
+                                        also
                                         the leap
                                         into electronic typesetting, remaining essentially unchanged. </div>
                                 </div>
@@ -392,6 +400,200 @@
                         <div class="pointer active"></div>
                         <div class="pointer"></div>
                         <div class="pointer"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- --------- SECTION 7: COMPANIES BAR --------- -->
+        <section>
+            <div class="section-body">
+                <div class="section-companiesbar-area">
+                    <img src="./media/empresa1.png" alt="">
+                    <img src="./media/empresa2.png" alt="">
+                    <img src="./media/empresa3.png" alt="">
+                    <img src="./media/empresa4.png" alt="">
+                    <img src="./media/empresa5.png" alt="">
+                    <img src="./media/empresa6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- ------------- SECTION 8: PRICE ------------- -->
+        <section class="default light">
+            <div class="section-price-area">
+                <div class="section-title">Price</div>
+                <div class="section-desc">Pricing Table</div>
+                <div class="section-body">
+                    <div class="section-prices">
+                        <div class="section-price">
+                            <div class="section-price--category">
+                                Express
+                            </div>
+                            <div class="section-price--price">
+                                $9.99
+                            </div>
+                            <div class="section-price--month">
+                                /Month
+                            </div>
+                            <div class="section-price--info">
+                                Tracking Issues
+                                <br>-<br>
+                                Add bugs through email
+                                <br>-<br>
+                                Notifications
+                                <br>-<br>
+                                Time Trancking
+                                <br>-<br>
+                                Custom Views
+                            </div>
+                            <a class="button" href="">Choose</a>
+                        </div>
+                        <div class="section-price">
+                            <div class="section-price--category">
+                                Standard
+                            </div>
+                            <div class="section-price--price">
+                                $14.99
+                            </div>
+                            <div class="section-price--month">
+                                /Month
+                            </div>
+                            <div class="section-price--info">
+                                Tracking Issues
+                                <br>-<br>
+                                Add bugs through email
+                                <br>-<br>
+                                Notifications
+                                <br>-<br>
+                                Time Trancking
+                                <br>-<br>
+                                Custom Views
+                            </div>
+                            <a class="button" href="">Choose</a>
+                        </div>
+                        <div class="section-price">
+                            <div class="section-price--category">
+                                Luxe
+                            </div>
+                            <div class="section-price--price">
+                                $19.99
+                            </div>
+                            <div class="section-price--month">
+                                /Month
+                            </div>
+                            <div class="section-price--info">
+                                Tracking Issues
+                                <br>-<br>
+                                Add bugs through email
+                                <br>-<br>
+                                Notifications
+                                <br>-<br>
+                                Time Trancking
+                                <br>-<br>
+                                Custom Views
+                            </div>
+                            <a class="button" href="">Choose</a>
+                        </div>
+                        <div class="section-price">
+                            <div class="section-price--category">
+                                Premium
+                            </div>
+                            <div class="section-price--price">
+                                $24.99
+                            </div>
+                            <div class="section-price--month">
+                                /Month
+                            </div>
+                            <div class="section-price--info">
+                                Tracking Issues
+                                <br>-<br>
+                                Add bugs through email
+                                <br>-<br>
+                                Notifications
+                                <br>-<br>
+                                Time Trancking
+                                <br>-<br>
+                                Custom Views
+                            </div>
+                            <a class="button active" href="">Choose</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ------------- SECTION 9: PREMIUM ------------- -->
+        <section class="default">
+            <div class="section-premium-area">
+                <div class="section-title">Premium</div>
+                <div class="section-desc">Even More Feautures Available</div>
+                <div class="section-body">
+                    <div class="section-premium">
+                        <div class="sliders">
+                            <div class="slide">
+                                <div class="slide-area">
+                                    <div class="section-premium-contents">
+                                        <!-- ----------- img ----------- -->
+                                        <img src="./media/livros.png" alt="">
+                                        <!-- --------- Content --------- -->
+                                        <div class="section-premium-content">
+                                            <div class="section-premium-content--right">
+                                                <!-- --------- Icon --------- -->
+                                                <img src="./assets/img/icons/check.png" alt="">
+                                                <div class="section-premium-content--desc">
+                                                    <h1>First Feauture</h1>
+                                                    <p>
+                                                        Present metus urna, feugiat a placerat vel, elementrum at leo.
+                                                        quieque vel fermentum ipsum, Nulla at facilsis est. <br>
+                                                        - FEAUTURE ONE <br>
+                                                        - FEAUTURE TWO <br>
+                                                        - FEAUTURE THREE
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="section-premium-content--right">
+                                                <!-- --------- Icon --------- -->
+                                                <img src="./assets/img/icons/check.png" alt="">
+                                                <div class="section-premium-content--desc">
+                                                    <h1>Second Feauture</h1>
+                                                    <p>
+                                                        Present metus urna, feugiat a placerat vel
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="section-premium-content--right">
+                                                <!-- --------- Icon --------- -->
+                                                <img src="./assets/img/icons/check.png" alt="">
+                                                <div class="section-premium-content--desc">
+                                                    <h1>Third Feauture</h1>
+                                                    <p>
+                                                        Present metus urna, feugiat a placerat vel, elementrum at leo.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slide-area">
+
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slide-area">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sliders-pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
+
+                    <div class="premium-area--button">
+                        <a class="button" href="">Get in Touch</a>
                     </div>
                 </div>
             </div>
