--- a/home.html
+++ b/home.html
@@ -68,7 +68,6 @@
                 <div class="pointer"></div>
             </div>
         </section>
-
         <!-- ----------- SECTION 2: ABOUT US ----------- -->
         <section class="default light">
             <div class="section-title">About Us?</div>
@@ -91,7 +90,6 @@
                 </div>
             </div>
         </section>
-
         <!-- ----------- SECTION 3: SERVICES ----------- -->
         <section class="default dark">
             <div class="section-title">Services</div>
@@ -121,7 +119,6 @@
                 </div>
             </div>
         </section>
-
         <!-- --------- SECTION 4: OUR PROJECTS --------- -->
         <section class="default light">
             <div class="section-title">Our Projects</div>
@@ -520,7 +517,7 @@
                 </div>
             </div>
         </section>
-        <!-- ------------- SECTION 9: PREMIUM ------------- -->
+        <!-- ------------ SECTION 9: PREMIUM ------------ -->
         <section class="default">
             <div class="section-premium-area">
                 <div class="section-title">Premium</div>
@@ -594,6 +591,81 @@
 
                     <div class="premium-area--button">
                         <a class="button" href="">Get in Touch</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ----------- SECTION 10: SOME FACTS---------- -->
+        <section class="default dark">
+            <div class="section-title">Some Facts</div>
+            <div class="section-desc">About Our Work</div>
+            <div class="section-body">
+                <div class="section-someFacts">
+                    <div class="section-someFacts-content">
+                        <div class="someFacts--number">1000</div>
+                        <div class="someFacts--border"></div>
+                        <h4>Design Projects Released</h4>
+                        <p>Present metus uma feugiar a piacerat eie mentum at leo</p>
+                    </div>
+                    <div class="section-someFacts-content">
+                        <div class="someFacts--number">900</div>
+                        <div class="someFacts--border"></div>
+                        <h4>Photos</h4>
+                        <br><p>Present metus uma feugiar a piacerat eie mentum at leo</p>
+                    </div>
+                    <div class="section-someFacts-content">
+                        <div class="someFacts--number">500</div>
+                        <div class="someFacts--border"></div>
+                        <h4>Marketing Ideas</h4>
+                        <p>Present metus uma feugiar a piacerat eie mentum at leo</p>
+                    </div>
+                    <div class="section-someFacts-content">
+                        <div class="someFacts--number">100</div>
+                        <div class="someFacts--border"></div>
+                        <h4>Exhibitions</h4>
+                        <br><p>Present metus uma feugiar a piacerat eie mentum at leo</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ----------- SECTION 11: CONTACTS BAR--------- -->
+        <section>
+            <div class="section-body">
+                <div class="section-contactsBar">
+                    <a href=""><img src="./assets/img/icons/share.png" alt=""></a>
+                    <a href="" class="contactsBar--txtshare">Tell about us</a>
+
+                    <a href="" class="contactsBar--icon"><img class="icon_twitter" src="./assets/img/icons/twitter.png" alt=""></a>
+                    <div class="contactsBar--count-twitter">152</div>
+
+                    <a href="" class="contactsBar--icon"><img class="icon_linkedin" src="./assets/img/icons/linkedin.png" alt=""></a>
+                    <div class="contactsBar--count-linkedin">31</div>
+
+                    <a href="" class="contactsBar--icon"><img class="icon_facebook" src="./assets/img/icons/facebook.png" alt=""></a>
+                    <div class="contactsBar--count-facebook">165</div>
+
+                    <a href="" class="contactsBar--icon"><img class="icon_googleplus" src="./assets/img/icons/googleplus.png" alt=""></a>
+                    <div class="contactsBar--count-googleplus">22</div>
+
+                    <a href="" class="contactsBar--icon"><img class="icon_pinterest" src="./assets/img/icons/pinterest.png" alt=""></a>
+                    <div class="contactsBar--count-pinterest">165</div>
+                </div>
+            </div>
+        </section>
+        <!-- ----------- SECTION 12: CONTACTS US--------- -->
+        <section class="default light">
+            <div class="section-contact-area">
+                <div class="section-title">CONTACT US</div>
+                <div class="section-desc">Our Agency Located in Melbourne, Australia</div>
+                <div class="section-body">
+                    <div class="section-contactUs">
+                        <input type="text" placeholder="NAME">
+                        <input type="email" placeholder="EMAIL">
+                        <input type="text" placeholder="SUBJECT">
+                        <input type="textarea" placeholder="MESSAGE">
+                    </div>
+                    <div class="premium-area--button">
+                        <a class="button" href="">Send Message</a>
                     </div>
                 </div>
             </div>
