--- a/home.html
+++ b/home.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awax</title>
+    <!-- Meta de responsividade -->
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/styleReset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -629,7 +630,7 @@
             </div>
         </section>
         <!-- ----------- SECTION 11: CONTACTS BAR--------- -->
-        <section>
+        <section class="default">
             <div class="section-body">
                 <div class="section-contactsBar">
                     <a href=""><img src="./assets/img/icons/share.png" alt=""></a>
@@ -670,10 +671,66 @@
                 </div>
             </div>
         </section>
+        <!-- ----------- SECTION 13: MAP --------- -->
+        <section class="section-map">
+            <div class="section-map--area">
+                <div class="section-map--info">
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="./assets/img/icons/carta.png" alt=""/>
+                        </div>
+                        Endereço completão que irá ter algum tamanho
+                    </div>
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="./assets/img/icons/localizacao.png" alt=""/>
+                        </div>
+                        Endereço completão que irá ter algum tamanho
+                    </div>
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="./assets/img/icons/telefone.png" alt=""/>
+                        </div>
+                        Endereço completão que irá ter algum tamanho
+                    </div>
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="./assets/img/icons/arroba.png" alt=""/>
+                        </div>
+                        Endereço completão que irá ter algum tamanho
+                    </div>
+                    <div class="section-map--info-item">
+                        <div class="section-map--info-item-img">
+                            <img src="./assets/img/icons/web.png" alt=""/>
+                        </div>
+                        Endereço completão que irá ter algum tamanho
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
-
+        <div class="footer--area">
+            <div class="footer--area-item item-1">
+                <div class="footer-social">
+                    <a href=""><img src="assets/img/icons/twitter.png" /></a>
+                    <a href=""><img src="assets/img/icons/linkedin.png" /></a>
+                    <a href=""><img src="assets/img/icons/facebook.png" /></a>
+                    <a href=""><img src="assets/img/icons/googleplus.png" /></a>
+                    <a href=""><img src="assets/img/icons/pinterest.png" /></a>
+                </div>
+            </div>
+            <div class="footer--area-item item-2">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+            </div>
+            <div class="footer--area-item item-3">
+                <form method="POST">
+                    <input type="email" name="email" placeholder="EMAIL TO SUBSCRIBE" />
+                    <button class="button">Subscribe</button>
+                </form>
+            </div>
+        </div>
     </footer>
 </body>
 
