Adicionado algumas responsividades

--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
                 <!--Temporário-->
             </div>
             <div class="menu">
+               <img class="menu-opener" src="assets/img/icons/menu.png" alt="" /> 
                 <nav>
                     <ul>
                         <li class="active"> <a href="">Home</a> </li>
